force-app/main/default/objects/DocDtl__c/fields/Catgry__c.field-meta.xml
<CustomField>
    <fullName>Catgry__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>PDD</fullName>
            </value>
            <value>
                <fullName>PRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>