force-app/main/default/objects/DocDtl__c/fields/DocCatgry__c.field-meta.xml
<CustomField>
    <fullName>DocCatgry__c</fullName>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banking Documents</fullName>
            </value>
            <value>
                <fullName>Beneficial Owner Documents</fullName>
            </value>
            <value>
                <fullName>Collateral Documents</fullName>
            </value>
            <value>
                <fullName>Income Documents</fullName>
            </value>
            <value>
                <fullName>KYC Documents</fullName>
            </value>
            <value>
                <fullName>PAN Documents</fullName>
            </value>
            <value>
                <fullName>Other Documents</fullName>
            </value>
            <value>
                <fullName>Verification Documents</fullName>
            </value>
            <value>
                <fullName>IMD Documents</fullName>
            </value>
            <value>
                <fullName>Constitution wise Mandatory documents</fullName>
            </value>
            <value>
                <fullName>Financial Documents</fullName>
            </value>
            <value>
                <fullName>Personal Discussion</fullName>
            </value>
            <value>
                <fullName>Case Documents</fullName>
            </value>
            <value>
                <fullName>Collateral Visit</fullName>
            </value>
            <value>
                <fullName>Sanction Letter</fullName>
            </value>
            <value>
                <fullName>NACH Form</fullName>
            </value>
            <value>
                <fullName>CAM Report</fullName>
            </value>
            <value>
                <fullName>Property Documents</fullName>
            </value>
            <value>
                <fullName>Mandatory Post Sanction Documents</fullName>
            </value>
            <value>
                <fullName>Additional Post Sanction Documents</fullName>
            </value>
            <value>
                <fullName>Disbursement Memo</fullName>
            </value>
            <value>
                <fullName>Sanction Condition Documents</fullName>
            </value>
            <value>
                <fullName>Insurance documents</fullName>
            </value>
            <value>
                <fullName>Bureau Report</fullName>
            </value>
            <value>
                <fullName>Perfios Report</fullName>
            </value>
            <value>
                <fullName>Pricing Approval Document</fullName>
            </value>
            <value>
                <fullName>Application Form</fullName>
            </value>
            <value>
                <fullName>LOD</fullName>
            </value>
            <value>
                <fullName>Relook Document</fullName>
            </value>
            <value>
                <fullName>Term Sheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>