force-app/main/default/objects/DocDtl__c/fields/DocTyp__c.field-meta.xml
<CustomField>
    <fullName>DocTyp__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional documents</fullName>
            </value>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>Address Proof (Residential)</fullName>
            </value>
            <value>
                <fullName>Audit Report (with schedules)</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
            <value>
                <fullName>Bureau Report</fullName>
            </value>
            <value>
                <fullName>CAM Report</fullName>
            </value>
            <value>
                <fullName>Charge Creation Documents</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Collateral Visit Photographs</fullName>
            </value>
            <value>
                <fullName>Constitution wise Mandatory documents</fullName>
            </value>
            <value>
                <fullName>Constitution wise Mandatory KYC documents</fullName>
            </value>
            <value>
                <fullName>CPV Documents</fullName>
            </value>
            <value>
                <fullName>CPV Photos</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>Disbursal Documents</fullName>
            </value>
            <value>
                <fullName>Disbursement Memo</fullName>
            </value>
            <value>
                <fullName>DOB Proof</fullName>
            </value>
            <value>
                <fullName>Financials - P&amp;L and BL</fullName>
            </value>
            <value>
                <fullName>Form 16</fullName>
            </value>
            <value>
                <fullName>Form 26 AS</fullName>
            </value>
            <value>
                <fullName>Form 60</fullName>
            </value>
            <value>
                <fullName>General Insurance documents</fullName>
            </value>
            <value>
                <fullName>GST Returns</fullName>
            </value>
            <value>
                <fullName>Identity Proof</fullName>
            </value>
            <value>
                <fullName>Income Tax Returns</fullName>
            </value>
            <value>
                <fullName>Increments/ Appraisal Letter</fullName>
            </value>
            <value>
                <fullName>ITR Computation</fullName>
            </value>
            <value>
                <fullName>Legal Verification</fullName>
            </value>
            <value>
                <fullName>Life Insurance documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>