force-app/main/default/objects/DocDtl__c/recordTypes/Demo_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Demo_RecordType</fullName>
    <active>true</active>
    <description>This recordtype is for Testing purpose</description>
    <label>Demo RecordType</label>
</RecordType>